--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,215 @@
-.App {
-  text-align: center;
+:root {
+    --card-shadow: 0 1px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*:focus {
+    outline: none;
+}
+
+body {
+    background-color: #F0F2F5;
+}
+
+label {
+    margin-right: 5px;
+    font-weight: bold;
+}
+
+.container {
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+@media (max-width: 1140px) {
+    .container {
+        padding: 0 20px;
+        margin: 0;
+    }
+}
+
+.container.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card {
+    width: 100%;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: var(--card-shadow);
+    display: flex;
+    flex-direction: column;
+}
+
+.card>*:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+button {
+    cursor: pointer;
+    font-weight: bold;
+    border: none;
+    padding: 15px 30px;
+    color: white;
+    background-color: #1B74E4;
+    border-radius: 10px;
+}
+
+button.danger {
+    background-color: #FF495C;
+}
+
+input {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    padding: 15px;
+    font-size: 18px;
+}
+
+header {
+    background-color: #333;
+    margin-bottom: 40px;
+}
+
+#main-header {
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#main-links {
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+
+#main-links>a {
+    display: block;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+span {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+h1 {
+    margin-bottom: 8px;
+    color: #00a6ff;
+}
+
+#main-links>a:hover {
+    background-color: #111;
+}
+
+a.active {
+    background-color: #00a6ff;
+}
+
+
+
+.searchpage {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    height: 40px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.searchpage input {
+    background: white;
+    font-size: 1.2rem;
+    padding: 1rem;
+    width: 85%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    border-radius: 0;
+}
+
+.icon-container {
+    height: 100%;
+    width: 15%;
+    background-color: #00a6ff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0;
+}
+
+.icon-container>* {
+    color: white;
+}
+
+.blogs-container {
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(535px, 1fr));
+    justify-content: center;
+    gap: 15px;
+}
+
+.blogs-container>* {
+    height: 100%;
+}
+
+.blogs-container img {
+    width: 100%;
+    max-height: 300px;
+}
+
+.blogs-container h1 {
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+
+}
+
+.card-desc {
+    display: block;
+    font-size: 1.2rem;
+    position: absolute;
+    height: 0;
+    top: 0;
+    opacity: 0;
+    padding: 18px 8%;
+    background-color: white;
+    overflow-y: scroll;
+    transition: 0.8s ease;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .movie-detail:hover .card-desc {
+    opacity: 1;
+    height: 50%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
